# typo

./: README.md
dbts/typo/: dbt_project.yml  profiles.yml
dbts/typo/models/inters/: schema.yml
dbts/typo/models/marts/: mart_top_keys_by_occupations.sql  mart_total.sql  mart_user.sql  schema.yml
dbts/typo/models/stages/: schema.yml  sources.yml  stg_records.sql  stg_users.sql
dbts/typo/seeds/: users.csv
kube/: .gitignore
kube/.kube/: config
kube/adm/: Chart.yaml  Taskfile.yaml  helmfile.yaml  values.gotmpl  values.yaml
kube/adm/charts/balancer/: Chart.yaml  values.yaml
kube/adm/charts/cluster/: Chart.yaml
kube/adm/charts/networking/: Chart.yaml  values.yaml
kube/adm/cluster/: config.prod.yaml  config.stage.yaml
kube/adm/values/: .gitignore  values.example.yaml  values.prod.yaml  values.stage.yaml
kube/data/: Chart.yaml  Taskfile.yaml  helmfile.yaml  values.yaml
kube/data/values/: values.example.yaml
pipes/: .dockerignore  .gitignore  Taskfile.yaml
pipes/typo/: .gitignore  Dockerfile  Taskfile.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
pipes/typo/typo/: __init__.py  definitions.py
registry/: .dockerignore  .gitignore  Taskfile.yaml
registry/notebook/: Dockerfile
typorio/: .gitignore  Taskfile.yaml  pyproject.toml
typorio/typorio/: main.py
typorio/typorio/core/: __init__.py  commands.py  constants.py  models.py  worker.py
typorio/typorio/utils/: __init__.py
web/: package.json  pnpm-lock.yaml  tailwind.config.ts
web/src/app/: layout.tsx  markdown.ts  page.tsx
web/src/styles/: globals.scss
(+49 files in other folders)
