[tool.poetry]
name = "typorio"
version = "0.1.2"
description = ""
authors = ["microtypo <microtypo.io@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
click = "^8.1.7"
boto3 = "^1.34.114"
pynput = "^1.7.7"
pydantic = "^2.7.2"

[tool.poetry.scripts]
typo = "typorio.main:cli"

[project.scripts]
calc = "typorio.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
